--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Server=LOCALHOST\\SQLEXPRESS2022;user=LOGIN;password=SENHA;Database=BANCO;Integrated Security=SSPI;TrustServerCertificate=True;"
   }
 }
+
+
+
+
